# Aegis-Stream

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  benchmarking.md  interfaces.md  roadmap.md  rtl_simulation_report.md  software_verification_report.md
docs/source/: deep-research-report.md
hardware/: README.md
hardware/cocotb/: cocotb_helpers.py  run_cocotb.py  test_feature_window_buffer.py  test_itch_canonicalizer.py  test_itch_packet_buffer.py  test_latency_telemetry.py  test_order_ref_store.py  test_price_level_topk.py  test_temporal_mixer_int8.py  test_transport_seq_checker.py
hardware/rtl/: aegis_stream_pkg.sv  feature_window_buffer.sv  itch_canonicalizer.sv  itch_packet_buffer.sv  latency_telemetry.sv  order_ref_store.sv  price_level_topk.sv  temporal_mixer_int8.sv  transport_seq_checker.sv
hardware/sim/: itch_canonicalizer_smoke.cpp  order_ref_store_smoke.cpp
src/aegis_stream/: __init__.py  __main__.py  benchmark.py  book.py  features.py  itch.py  model.py  pipeline.py  telemetry.py  transport.py
src/aegis_stream/data/: temporal_mixer_weights.json
tests/: test_benchmark.py  test_book.py  test_itch.py  test_model.py  test_pipeline.py  test_transport.py
tools/: generate_report.py  replay_demo.py
