[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aegis-stream"
version = "0.1.0"
description = "Golden models and starter RTL for deterministic FPGA limit-order-book analytics and sparse sequence inference."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Aegis-Stream contributors" }]
dependencies = []

[project.scripts]
aegis-replay = "aegis_stream.pipeline:main"
aegis-benchmark = "aegis_stream.benchmark:main"

[project.optional-dependencies]
dev = [
  "cocotb>=2.0,<3",
  "pytest>=8",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
aegis_stream = ["data/*.json"]
